src-errormsg/E20-ListOpConfusion/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E20-ListOpConfusion/Plutarch.hs:34:12: error: [GHC-25897]
    • Couldn't match type ‘a’ with ‘PList a’
        arising from a use of ‘plam’
      ‘a’ is a rigid type variable bound by
        the type signature for:
          pprepend :: forall (s :: S) (a :: S -> *).
                      Term s (PList a :--> (PList a :--> PList a))
        at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E20-ListOpConfusion/Plutarch.hs:33:1-54
    • In the first argument of ‘($)’, namely ‘plam’
      In the expression: plam $ \ xs ys -> pcon (PCons xs ys)
      In an equation for ‘pprepend’:
          pprepend = plam $ \ xs ys -> pcon (PCons xs ys)
    • Relevant bindings include
        pprepend :: Term s (PList a :--> (PList a :--> PList a))
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E20-ListOpConfusion/Plutarch.hs:34:1)
   |
34 | pprepend = plam $ \xs ys -> pcon (PCons xs ys)
   |            ^^^^
